--- a/index.html
+++ b/index.html
@@ -259,9 +259,78 @@
         <!-- overlay --> 
         </a> </div>
     </div>
+    <div class="row no-gutter">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/portfolio/09.jpg" class="work-box"> <img src="images/portfolio/09.jpg" alt="">
+        <div class="overlay">
+          <div class="overlay-caption">
+             <p><span class="icon icon-magnifying-glass"></span></p>
+          </div>
+        </div>
+        <!-- overlay --> 
+        </a> </div>
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/portfolio/10.jpg" class="work-box"> <img src="images/portfolio/10.jpg" alt="">
+        <div class="overlay">
+          <div class="overlay-caption">
+            <p><span class="icon icon-magnifying-glass"></span></p>
+          </div>
+        </div>
+        <!-- overlay --> 
+        </a> </div>
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/portfolio/12.jpg" class="work-box"> <img src="images/portfolio/12.jpg" alt="">
+        <div class="overlay">
+          <div class="overlay-caption">
+            <p><span class="icon icon-magnifying-glass"></span></p>
+          </div>
+        </div>
+        <!-- overlay --> 
+        </a> </div>
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/portfolio/13.jpg" class="work-box"> <img src="images/portfolio/13.jpg" alt="">
+        <div class="overlay">
+          <div class="overlay-caption"> 
+            <p><span class="icon icon-magnifying-glass"></span></p>
+          </div>
+        </div>
+        <!-- overlay --> 
+        </a> </div>
+		</div>
+    <div class="row">
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/portfolio/15.jpg" class="work-box"> <img src="images/portfolio/15.jpg" alt="">
+        <div class="overlay">
+          <div class="overlay-caption">
+            <p><span class="icon icon-magnifying-glass"></span></p>
+          </div>
+        </div>
+        <!-- overlay --> 
+        </a> </div>
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/portfolio/16.jpg" class="work-box"> <img src="images/portfolio/16.jpg" alt="">
+        <div class="overlay">
+          <div class="overlay-caption">
+            <p><span class="icon icon-magnifying-glass"></span></p>
+          </div>
+        </div>
+        <!-- overlay --> 
+        </a> </div>
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/portfolio/17.jpg" class="work-box"> <img src="images/portfolio/17.jpg" alt="">
+        <div class="overlay">
+          <div class="overlay-caption">
+            <p><span class="icon icon-magnifying-glass"></span></p>
+          </div>
+        </div>
+        <!-- overlay --> 
+        </a> </div>
+      <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="images/portfolio/18.jpg" class="work-box"> <img src="images/portfolio/18.jpg" alt="">
+        <div class="overlay">
+          <div class="overlay-caption">
+             <p><span class="icon icon-magnifying-glass"></span></p>
+          </div>
+        </div>
+        <!-- overlay --> 
+        </a> </div>
+    </div>
   </div>
 </section>
 <!-- gallery section --> 
+
 <!-- our team section -->
 <section id="teams" class="section teams">
   <div class="container">
@@ -273,8 +342,8 @@
       <div class="col-md-3 col-sm-6">
         <div class="person"><img src="images/team-1.jpg" alt="" class="img-responsive">
           <div class="person-content">
-            <h4>Jonh Dow</h4>
-            <h5 class="role">Founder</h5>
+            <h4>Rohit Raj Vishwakarma</h4>
+            <h5 class="role">Co-Founder</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eget risus vitae massa.</p>
           </div>
           <ul class="social-icons clearfix">
@@ -287,7 +356,7 @@
       <div class="col-md-3 col-sm-6">
         <div class="person"> <img src="images/team-2.jpg" alt="" class="img-responsive">
           <div class="person-content">
-            <h4>Markus Linn</h4>
+            <h4>RR Vishwakarma</h4>
             <h5 class="role">Creative</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eget risus vitae massa.</p>
           </div>
