--- a/index.html
+++ b/index.html
@@ -342,9 +342,10 @@
       <div class="col-md-3 col-sm-6">
         <div class="person"><img src="images/team-1.jpg" alt="" class="img-responsive">
           <div class="person-content">
-            <h4>Rohit Raj Vishwakarma</h4>
-            <h5 class="role">Co-Founder</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eget risus vitae massa.</p>
+            <h4>RajKishore Vishwakarma</h4>
+            <h5 class="role">Founder</h5>
+            <p>Contact : 9450079616 , 8840863372</p>
+		  
           </div>
           <ul class="social-icons clearfix">
             <li><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -356,9 +357,9 @@
       <div class="col-md-3 col-sm-6">
         <div class="person"> <img src="images/team-2.jpg" alt="" class="img-responsive">
           <div class="person-content">
-            <h4>RR Vishwakarma</h4>
-            <h5 class="role">Creative</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eget risus vitae massa.</p>
+            <h4>Rohit Vishwakarma</h4>
+            <h5 class="role">Co-Founder</h5>
+            <p>Mobile : 7007626172, 9670429140</p>
           </div>
           <ul class="social-icons clearfix">
             <li><a href="#" class=""><span class="fa fa-facebook"></span></a></li>
@@ -370,9 +371,9 @@
       <div class="col-md-3 col-sm-6">
         <div class="person"> <img src="images/team-3.jpg" alt="" class="img-responsive">
           <div class="person-content">
-            <h4>Chris Jemes</h4>
+            <h4>Rameshwar Vishwakarma</h4>
             <h5 class="role">Technical</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eget risus vitae massa.</p>
+            <p></p>
           </div>
           <ul class="social-icons clearfix">
             <li><a href="#" class=""><span class="fa fa-facebook"></span></a></li>
@@ -384,9 +385,9 @@
       <div class="col-md-3 col-sm-6">
         <div class="person"> <img src="images/team-4.jpg" alt="" class="img-responsive">
           <div class="person-content">
-            <h4>Vintes Mars</h4>
-            <h5 class="role">Marketing</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit eget risus vitae massa.</p>
+            <h4>Rashi Rai</h4>
+            <h5 class="role">Creative-Head</h5>
+            <p></p>
           </div>
           <ul class="social-icons clearfix">
             <li><a href="#" class=""><span class="fa fa-facebook"></span></a></li>
