--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
             <div id="content24" data-section="content-24" class="data-section"> 
     		<div class="col-md-6">
 				<h3 class="eidtContent">Content Video</h3>
-				<p class="eidtContent">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-   				<p class="editContent">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-				<p class="editContent">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+				<p class="eidtContent">Our interior design experts work with you to create the space that you have been dreaming about. We create home interior designs that are unique to you and your preferences. </p>
+   				<p class="editContent">Complete interior design solutions for your living room, starting from spectacular TV units, Kathedra range of sofas and much more. Book a free design consultation with us and get unique home interior design ideas for you</p>
+				<p class="editContent">Your kids will love our vibrant interior designs crafted specially to meet the preferences of the little ones. You can create personalized home interior designs with HomeLane?s design experts. .</p>
     		</div>
 			<div class="col-md-6">
 				<div class="embed-responsive embed-responsive-16by9">
