--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ semper aliquam quis mattis consectetur adipiscing elit.." </h1>
 <div class="container-fluid">
 <div id="map-row" class="row">
     <div class="col-xs-12">    
-    	<iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed/v1/view?zoom=17&center=25.4554%2C78.5665&key=..."></iframe> 
+    	<iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3602.5034983205474!2d78.56465431558908!3d25.454857727443965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x397777a410294d6d%3A0x476b486749a53585!2sR.R%20Interiors!5e0!3m2!1sen!2sin!4v1624876838413!5m2!1sen!2sin"></iframe> 
       
           <div id="map-overlay" class="col-xs-5 col-xs-offset-6" style="">
     		<h2 style="margin-top:0;color:#fff;">Contact us</h2>
