--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="google-site-verification" content="WzJoeuHwT2NfK-9XD-q4RvZ94MDX1FZGYu5UmY2gltg" />
-<title>RR Interiors | Contructions</title>
+<title>RR Home Interiors</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/flexslider.css">
 <link rel="stylesheet" href="css/jquery.fancybox.css">
