--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <!-- header section -->
 <section class="banner" role="banner">
   <header id="header">
-    <div class="header-content clearfix"> <a class="logo" href="index.html">RR Interiors</a>
+    <div class="header-content clearfix"> <a class="logo" href="index.html">RR Home Interiors</a>
       <nav class="navigation" role="navigation">
         <ul class="primary-nav">
 		 <li><a href="#banner">Home</a></li>
